infras/k8s/services/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  selector:
    matchLabels:
      app: gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: adamiscool/test-gateway:v0.0.20
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
              readOnly: true
            - name: policy-volume
              mountPath: /etc/policy
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: gateway-config
        - name: policy-volume
          configMap:
            name: policy-file
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
