infras/k8s/services/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  selector:
    matchLabels:
      app: order-service
  replicas: 1
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - image: adamiscool/test-service:v0.0.5
          name: order-service
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
    - name: grpc
      port: 9000
      appProtocol: grpc
      targetPort: 9000
  type: ClusterIP
---
