infras/k8s/services/gateway-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"   # Domain name of the external website
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: gateway
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - ingress-gateway-configuration
  http:
    - route:
        - destination:
            host: gateway.default.svc.cluster.local
            port:
              number: 8000
